public/styles.css
html, body {
    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    box-sizing: border-box;
    background-color: #000000;
    margin: 0;
    height: 100vh;
    width: auto;
    color: #E0E0E0;
}

header h1 {
    padding-top: 1em;
    margin: 0;
    text-align: center;
}

#logInCard {
    background: #18191b;
    border-radius: 1.2em;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(8.9px);
    -webkit-backdrop-filter: blur(8.9px);
    width: fit-content;
    padding: 0 3vw;
    height: 30%;
    text-align: center;
    margin-top: 10vh;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#logInCard h1 {
    margin-top: 0.8em;
}

#logInCard p {
    display: flex;
    flex-direction: column;
}

#logInCard p label {
    align-self: flex-start;
    margin-bottom: 0.8em;
    font-weight: bold;
}

#username, #password{
    color: #E0E0E0;
    background-color: #255faa;
    border: none;
    border-radius: 1em;
    padding: 1em;
}

#username:focus, #password:focus {
    outline: #62a6ff solid 0.3em;
}

#logInSubmit {
    color: #E0E0E0;
    background-color: #255faa;
    border: none;
    border-radius: 1em;
    padding: 1em;
    font-weight: bold;
    margin-bottom: 0.5em;
}

#logInSubmit:hover {
    background-color: #62a6ff;
}

/* dashboard.html */

#dashNav{
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    gap: 2vw;
    height: auto;
    margin: 0;
    font-size: clamp(1vw, 1em, 2vw);
    background: #18191b;
}

#dashNav, #dashNav a {
    color: white;
    font-size: clamp(1em, 1vw, 3vw);
}

#dashNav a {
    background-color: #255faa;
    padding: 2vh 2vw;
    text-decoration: none;
    margin-right: 8vw;
}

#dashNav a:hover {
    background-color: #62a6ff;
}

#dashNav #logOutButton {
    margin-right: auto;
    margin-left: 8vw;
}

#exerciseCard {
    background: #18191b;
    display: flex;
    flex-direction: row;
    justify-items: center;
    justify-content: center;
    align-items: center;
    padding: 2vh 2vw;
    gap: 2vw;
    width: auto;
    overflow: hidden;
}

#exerciseCard h3#exerciseTitle {
    text-align: center;
    margin: 0;
    border-radius: 1em;
    font-size: 1em;
    padding: 2.4vw;
}


#exerciseCard div#exerciseLastWeight {
    background-color: #255faa;
    font-size: 1em;
    border-radius: 1em;
    padding: 2.4vw;
    font-weight: bold;
}

#exerciseCard #newExerciseWeight {
    background-color: #255faa;
    color: white;
    width: 12vw;
    padding: 2.4vw;
    border-radius: 1em;
    font-size: 1em;
    border: none;
}

#exerciseCard #newExerciseWeight:focus {
    outline: solid #62a6ff;
}

#exerciseCard #updateExercise {
    padding: 2.4vw;
    border-radius: 1em;
    border: none;
    color: white;
    background-color: #255faa;
}

